2015-07-26  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): When doing regex replacements, find
	 each zero-length match only once.  This fixes Savannah bug #45626.

2015-07-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init, strtosc), src/files.c (savefile),
	doc/man/nanorc.5, doc/texinfo/nano.texi: Add a new bindable function,
	'savefile', which writes a file to disk without first asking for its
	name.  This implements Savannah patch #8208 submitted by Seiya Nuta.

2015-07-23  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/{nano.1,nanorc.5}, doc/texinfo/nano.texi: Add deprecation
	notices for the options 'set const', 'set poslog' and '--poslog'.
	Suggested by Eitan Adler.
	* doc/faq.html: Mention --disable-histories and --disable-libmagic.
	* src/chars.c (mbstrcasestr, mbrevstrcasestr): When searching, find
	only valid UTF-8 byte sequences.  This fixes Savannah bug #45579.

2015-07-22  Mike Frysinger  <vapier@gentoo.org>
	* src/files.c (check_dotnano), src/global.c (thanks_for_all_the_fish),
	src/rcfile.c (parse_binding): Plug a few memory leaks.

2015-07-19  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main): Accept again a +LINE argument for each file
	given on the command line.  This fixes Savannah bug #45576.
	* src/nano.c (main): Adjust some comments and rewrap some lines.

2015-07-18  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): When looking for multiline-regex matches,
	look for a new start only after an end, instead of right after the
	last start.  This fixes bug #45525 and bug #41313 on Savannah.
	* src/nano.c, src/text.c, src/winio.c: Adjust some comments.
	* doc/faq.html: Fix a few typos and make some updates for 2.4.*.
	* ChangeLog: Make the release markers stand out more.

2015-07-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (open_buffer): Verify that a named and existing file