@@ -964,7 +964,13 @@ Searches for text in the current buffer --- or for filenames matching
 a string in the current list in the file browser
 
 @item searchagain
-Repeats the last search command.
+Repeats the last search command without prompting.
+
+@item findprevious
+As @code{searchagain}, but always in the backward direction.
+
+@item findnext
+As @code{searchagain}, but always in the forward direction.
 
 @item replace
 Interactively replaces text within the current buffer.
