@@ -1,6 +1,10 @@
 2015-07-26  Benno Schulenberg  <bensberg@justemail.net>
 	* src/search.c (do_replace_loop): When doing regex replacements, find
-	 each zero-length match only once.  This fixes Savannah bug #45626.
+	each zero-length match only once.  This fixes Savannah bug #45626.
+	* src/global.c (shortcut_init, strtosc), src/search.c (do_findnext,
+	do_findprevious), doc/man/nanorc.5, doc/texinfo/nano.texi: Add two
+	new bindable functions, 'findnext' and 'findprevious', which repeat
+	the last search command in a fixed direction without prompting.
 
 2015-07-25  Benno Schulenberg  <bensberg@justemail.net>
 	* src/global.c (shortcut_init, strtosc), src/files.c (savefile),
